DHC Components/objects/Limits_Notification__c.object
<CustomObject>
    <description>This object is used for Org Limit Notification.</description>
    <fields>
        <fullName>Breach_Count__c</fullName>
        <label>Breach Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Component_Name__c</fullName>
        <label>Component Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Display_Name__c</fullName>
        <label>Limit Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entry_Point__c</fullName>
        <label>Entry Point</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Breach__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Breach</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Flow__c</fullName>
        <label>Flow</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Hard_Threshold__c</fullName>
        <label>Hard Threshold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Impact_Analysis__c</fullName>
        <label>Impact Analysis</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Latest_Breach__c</fullName>
        <formula>LastModifiedDate</formula>
        <label>Latest Breach Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Limit_Type__c</fullName>
        <label>Limit Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Limit_Utilization__c</fullName>
        <label>Limit Utilization</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_Limit__c</fullName>
        <label>Max Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Measure__c</fullName>
        <label>Action Required</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Percentage_Used__c</fullName>
        <formula>Limit_Utilization__c * 100/Max_Limit__c</formula>
        <label>Percentage Used</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Placeholder__c</fullName>
        <label>Placeholder</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Breach Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_Hard_Threshold_Notification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Hard Threshold Notification?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_Soft_Threshold_Notification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Soft Threshold Notification?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sobject_Name__c</fullName>
        <label>Sobject Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Soft_Threshold__c</fullName>
        <label>Soft Threshold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time__c</fullName>
        <formula>(CASE(VALUE(MID(TEXT(LastModifiedDate),12,2)), 
0, &quot;12AM-1AM&quot;, 
1,&quot;1AM-2AM&quot;, 
2,&quot;2AM-3AM&quot;, 
3,&quot;3AM-4AM&quot;, 
4,&quot;4AM-5AM&quot;, 
5,&quot;5AM-6AM&quot;, 
6,&quot;6AM-7AM&quot;, 
7,&quot;7AM-8AM&quot;, 
8,&quot;8AM-9AM&quot;, 
9,&quot;9AM-10AM&quot;, 
10,&quot;10AM-11AM&quot;, 
11,&quot;11AM-12PM&quot;, 
12,&quot;12PM-1PM&quot;, 
13,&quot;1PM-2PM&quot;, 
14,&quot;2PM-3PM&quot;, 
15,&quot;3PM-4PM&quot;, 
16,&quot;4PM-5PM&quot;, 
17,&quot;5PM-6PM&quot;, 
18,&quot;6PM-7PM&quot;, 
19,&quot;7PM-8PM&quot;, 
20,&quot;8PM-9PM&quot;, 
21,&quot;9PM-10PM&quot;, 
22,&quot;9PM-10PM&quot;, 
23,&quot;10PM-11PM&quot;, 
24,&quot;11PM-12AM&quot;, 
&quot;The formula did not calculate correctly. please inform the system admin.&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit__c</fullName>
        <label>Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UnquieKey__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>UnquieKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Breach Notification</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>First_Breach__c</columns>
        <columns>Latest_Breach__c</columns>
        <columns>Priority__c</columns>
        <columns>Display_Name__c</columns>
        <columns>Limit_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Limit_Type__c</field>
            <operation>equals</operation>
            <value>RunTime Limit</value>
        </filters>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>equals</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>Limit-{0000}</displayFormat>
        <label>Limits Notification Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Breach Notifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>